# os-vm-expire-osc-plugin

./: .gitignore  README.rst  setup.cfg
.github/workflows/: main.yml
osvmexpire/: __init__.py  _i18n.py  exc.py
osvmexpire/common/: http.py  utils.py
osvmexpire/osc/: plugin.py
osvmexpire/osc/v1/: client.py  expire.py
osvmexpireclient/: exc.py
osvmexpireclient/common/: utils.py
osvmexpireclient/osc/: plugin.py
osvmexpireclient/osc/v1/: exclude.py  expire.py
releasenotes/notes/: add_all_option-81fa64d3484d7223.yaml  add_exclude-01ed63fdb3a777cc.yaml  first-release-2f3004c1e34de256.yaml
releasenotes/source/: conf.py
rpm/: os-vm-expire.spec
