[metadata]
name = python-osvmexpireclient
url = http://launchpad.net/python-osvmexpireclient
summary = OpenStack Orchestration API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-osvmexpireclient/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    osvmexpire

[entry_points]
#console_scripts =
#    osvmexpire = osvmexpire.shell:main

openstack.cli.extension =
    osvmexpire = osvmexpire.osc.plugin

openstack.osvmexpire.v1 =
    osvmexpire_vmexpire_extend = osvmexpire.osc.v1.expire:ExtendExpire
    osvmexpire_vmexpire_delete = osvmexpire.osc.v1.expire:DeleteExpire
    osvmexpire_vmexpire_list = osvmexpire.osc.v1.expire:ListExpire


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
builders = html,man
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = osvmexpireclient/locale/osvmexpireclient.pot

[compile_catalog]
directory = osvmexpire/locale
domain = osvmexpire

[update_catalog]
domain = osvmexpire
output_dir = osvmexpire/locale
input_file = osvmexpire/locale/osvmexpireclient.pot
