[metadata]
name = python-osvmexpireclient
url = https://github.com/genouest/os-vm-expire-osc-plugin
summary = OpenStack os-vm-expire API Client Library
description-file =
    README.rst
author = Olivier Sallou
author-email = olivier.sallou@irisa.fr
home-page = https://github.com/genouest/os-vm-expire-osc-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    osvmexpireclient

[entry_points]
#console_scripts =
#    osvmexpire = osvmexpireclient.shell:main

openstack.cli.extension =
    osvmexpire = osvmexpireclient.osc.plugin

openstack.osvmexpire.v1 =
    osvmexpire_vmexpire_extend = osvmexpireclient.osc.v1.expire:ExtendExpire
    osvmexpire_vmexpire_delete = osvmexpireclient.osc.v1.expire:DeleteExpire
    osvmexpire_vmexpire_list = osvmexpireclient.osc.v1.expire:ListExpire
    osvmexpire_vmexpire_show = osvmexpireclient.osc.v1.expire:ShowExpire


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
builders = html,man
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = osvmexpireclient/locale/osvmexpireclient.pot

[compile_catalog]
directory = osvmexpire/locale
domain = osvmexpire

[update_catalog]
domain = osvmexpire
output_dir = osvmexpire/locale
input_file = osvmexpire/locale/osvmexpireclient.pot
